--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Push Notification avec Web-Push</h1>
+    
+    <button id="sub-btn">Subscribe</button>
 
     <script src="./main.js"></script>
   </body>
